--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,17 @@
     .main .section.benefits .benefits-list .description {
         margin: 0;
     }
-
+    .main .section.features .features-list .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 270px;
+        height: 120px;
+        margin-bottom: 30px;
+      
+        background-color: var(--secondary-accent-color);
+        border-radius: 4px;
+      }
 
 
     /* Приклади робіт*/
